--- a/mapGame.css
+++ b/mapGame.css
@@ -2,6 +2,11 @@
   height: 80vh;
   width: 100%;
  }
+
+#options {
+  height: 20vh;
+  width: 100%;
+}
  
 .win {
   color: green;
@@ -9,4 +14,28 @@
 
 .lose {
   color: red;
+}
+
+button {
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 1vw;
+  background: #3498db;
+  border:none;
+  margin: 0.5vw;
+  padding: 0.5vw 1vw 0.5vw 1vw;
+  border-right: solid #bbbbbb .1vw;
+  border-bottom: solid #bbbbbb .1vw;
+  text-decoration: none;
+}
+
+button:hover {
+  background: #3cb0fd;
+  vertical-align: -0.1vw;
+  margin-left: 0.55vw;
+  margin-right: 0.65vw;
+  border-right: none;
+  border-bottom: none;
+  text-decoration: none;
+  font-size: 0.99vw
 }
