--- a/mapGame.css
+++ b/mapGame.css
@@ -6,8 +6,10 @@
 #options {
   height: 20vh;
   width: 100%;
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-auto-columns: max-content;
+  grid-auto-rows: 7vh;
+  grid-template-columns: repeat(auto-fit, [col-start] minmax(max-content,100%) [col-end]);
 }
  
 .win {
@@ -21,22 +23,22 @@
 }
 
 button {
-  font-size: 1vw;
+  font-size: 14pt;
   background: navajowhite;
   border:none;
-  margin: 0.5vw;
-  padding: 0.5vw 1vw 0.5vw 1vw;
-  border-right: solid Gainsboro .1vw;
-  border-right: solid Gainsboro .1vw;
-  border-bottom: solid Gainsboro .1vw;
+  margin: 1em;
+  width: max-content;
+  padding: 10 20 10 20;
+  height: fit-content;
+  border-right: solid Gainsboro .5pt;
+  border-bottom: solid Gainsboro .5pt;
 }
 
 button:hover {
   background: moccasin;
-  vertical-align: -0.1vw;
-  margin-left: 0.55vw;
-  margin-right: 0.6065vw;
+  margin-left: 1.15em;
+  margin-right: 1.05em;
   border-right: none;
   border-bottom: none;
-  font-size: 0.99vw
+  font-size: 13.9pt;
 }
